--- a/styles/style.sass
+++ b/styles/style.sass
@@ -1,3 +1,9 @@
+*
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+
+    
 body
     background-color: #7a7aa3
     color: #eee
@@ -9,3 +15,29 @@ body
 
 Home
     color: #282828
+    position: relative
+
+    h1
+        position: absolute
+        z-index: 1
+
+    #lowerSvg
+        background-color: #ddd
+
+Header
+    position: absolute
+    top: 0
+    width: 100vw
+    height: 15vh
+
+    part
+        display: inline-block
+
+Footer
+    position: absolute
+    bottom: 0
+    width: 100vw
+
+    part
+        display: inline-block
+        height: 15vh
